# flask-az-sso-examples

./: .env.template  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
src/: app.py  app_flask_dance.py  app_manual.py  app_msal.py
