[tool.poetry]
name = "azure-sso"
version = "0.1.0"
description = ""
authors = ["Jack Mead <jack.mead@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
Flask = "^2.1.3"
Flask-Login = "^0.6.1"
requests = "^2.28.1"
Flask-Dance = "^6.0.0"
msal = "^1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
